src/snapshots/tests__binary_tree_all_true.snap
---
created: "2019-03-03T03:22:24.619712Z"
creator: insta@0.6.3
source: src/lib.rs
expression: maze.as_string()
---
+---+---+---+
|           |
+   +   +   +
|   |   |   |
+   +   +   +
|   |   |   |
+---+---+---+
