src/snapshots/tests__binary_tree_alternating_bool.snap
---
created: "2019-03-03T03:28:20.423924Z"
creator: insta@0.6.3
source: src/lib.rs
expression: maze.as_string()
---
+---+---+---+
|           |
+---+   +   +
|       |   |
+   +---+   +
|   |       |
+---+---+---+
