src/snapshots/tests__next_cell_open_east_wall.snap
---
created: "2019-03-02T16:37:08.052968Z"
creator: insta@0.6.3
source: src/lib.rs
expression: traveler.release().as_string()
---
+---+---+---+
|   |   |   |
+---+---+---+
|   |   |   |
+---+---+---+
|   |       |
+---+---+---+
