src/snapshots/tests__open_east_wall.snap
---
created: "2019-03-02T16:19:43.969108Z"
creator: insta@0.6.3
source: src/lib.rs
expression: traveler.release().as_string()
---
+---+---+---+
|   |   |   |
+---+---+---+
|   |   |   |
+---+---+---+
|       |   |
+---+---+---+
