src/snapshots/tests__sidewinder_all_false.snap
---
created: "2019-03-03T03:36:53.735714Z"
creator: insta@0.6.3
source: src/lib.rs
expression: maze.as_string()
---
+---+---+---+
|           |
+---+---+   +
|           |
+---+---+   +
|           |
+---+---+---+
