src/snapshots/tests__sidewinder_all_true.snap
---
created: "2019-03-03T03:38:45.781071Z"
creator: insta@0.6.3
source: src/lib.rs
expression: maze.as_string()
---
+---+---+---+
|           |
+   +   +   +
|   |   |   |
+   +   +   +
|   |   |   |
+---+---+---+
