src/snapshots/tests__sidewinder_alternating_bool_0usize.snap
---
created: "2019-03-03T03:57:51.896392Z"
creator: insta@0.6.3
source: src/lib.rs
expression: maze.as_string()
---
+---+---+---+
|           |
+   +---+   +
|       |   |
+   +   +---+
|   |       |
+---+---+---+
