src/snapshots/tests__sidewinder_alternating_bool_1usize.snap
---
created: "2019-03-03T03:58:28.251429Z"
creator: insta@0.6.3
source: src/lib.rs
expression: maze.as_string()
---
+---+---+---+
|           |
+---+   +   +
|       |   |
+   +---+   +
|   |       |
+---+---+---+
